feat(css): add background image and update nav
remove borders from nav list

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -168,6 +168,32 @@
             "7e70da7e"
           ],
           "type": "sass"
+        },
+        "148dd210": {
+          "id": "148dd210",
+          "path": "images/fog-forest.jpg",
+          "output": "images/fog-forest.jpg",
+          "name": "fog-forest.jpg",
+          "category": "IMAGE",
+          "size": 12739185,
+          "type": "jpg",
+          "initialSize": 12739185,
+          "optimized": false,
+          "height": 3648,
+          "width": 5472
+        },
+        "76c2be34": {
+          "id": "76c2be34",
+          "path": "images/mountains.jpg",
+          "output": "images/mountains.jpg",
+          "name": "mountains.jpg",
+          "category": "IMAGE",
+          "size": 995251,
+          "type": "jpg",
+          "initialSize": 995251,
+          "optimized": false,
+          "height": 1067,
+          "width": 1600
         }
       },
       "deploymentHistory": {},
